<resources>
    <string name="app_name">Fundo</string>
    <string name="facebook_app_id">1740883032969226</string>
    <string name="fb_login_protocol_scheme">fb1740883032969226</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="note_title">Title</string>
    <string name="note_content">Note</string>
    <string name="nav_drawer_username">Name</string>
    <string name="password_reset_email_request_text">Enter the email address to receive password reset link</string>
    <string name="email_hint">Email</string>
    <string name="reset_hint">Reset</string>
    <string name="welcome_back_user_login">Welcome Back</string>
    <string name="welcome_sub_text_user_login">Please login to continue</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="register_pretext">Don\'t have an account?</string>
    <string name="register_button_text">Register</string>
    <string name="or">Or</string>
    <string name="sign_up_main_text">Sign-Up</string>
    <string name="sign_up_subtext">Please Fill in all the details</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_pretext">Already have an account?</string>
    <string name="placeholder_email">email@email.com</string>
    <string name="logout_button_text">Logout</string>
    <string name="password_validation_error">Please enter the password</string>
    <string name="email_validation_error">Please enter a valid email address</string>
    <string name="name_validation_error">Please enter your name</string>
    <string name="phone_validation_error">Please enter a valid phone</string>
    <string name="passwords_mismatch_error">Passwords don\'t match</string>
    <string name="password_min_chars_validation_error">Password must be of minimum 8 characters</string>
    <string name="nav_drawer_notes">Notes</string>
    <string name="nav_drawer_reminders">Reminders</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_about">About</string>
    <string name="action_search_title">Search</string>
    <string name="change_layout_title">Change Layout</string>
    <string name="profile_title">Profile</string>
    <string name="sign_in_success_toast">Sign in success</string>
    <string name="sign_in_failed_toast">Authentication Failed</string>
    <string name="password_reset_link_sent_text">Password reset link has been sent to your email</string>
    <string name="user_not_registered">User not registered</string>
    <string name="empty_note_discarded">Empty Note Discarded</string>
    <string name="storage_denied_permission_error">Storage Access required to upload picture</string>
    <string name="no_internet_error">No internet connection available</string>
    <string name="create_new_label">Create New Label</string>
    <string name="labels_title">Labels</string>
    <string name="create_new_label_textedit">Create New label</string>
</resources>