<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:id="@+id/mainContent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/notes"
            android:title="@string/nav_drawer_notes"
            android:icon="@drawable/icon_note">
        </item>

        <item
            android:id="@+id/reminders"
            android:title="@string/nav_drawer_reminders"
            android:icon="@drawable/icon_reminder">
        </item>
    </group>

    <group android:id="@+id/misc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:title="@string/nav_drawer_settings"
            android:icon="@drawable/icon_settings">
        </item>

        <item
            android:id="@+id/about"
            android:title="@string/nav_drawer_about"
            android:icon="@drawable/icon_info">
        </item>
    </group>

    <item
        android:id="@+id/logout"
        android:title="@string/logout_button_text"
        android:icon="@drawable/button_logout">
    </item>
</menu>