<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_back_user_login"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/smallWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_marginStart="10dp"
        android:text="@string/welcome_sub_text_user_login"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextEditLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smallWelcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextEditLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTextEditLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextEditLayout"
        android:layout_alignStart="@+id/passwordTextEditLayout"
        android:layout_marginStart="5dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/purple_700"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextEditLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login_button_text"
        android:textColor="@color/material_text_color"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/regLogChangeLText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignStart="@id/passwordTextEditLayout"
        android:layout_marginTop="10dp"
        android:text="@string/register_pretext"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/regLogChangeRText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/regLogChangeLText"
        android:text="@string/register_button_text"
        android:textColor="@color/purple_700"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@id/regLogChangeLText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />
</RelativeLayout>