<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enterEmailAddressText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/password_reset_email_request_text"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextEditLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enterEmailAddressText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextEditLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_hint"
        android:textColor="@color/material_text_color"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

</RelativeLayout>